Fixed overflow of deleteModal

--- a/src/components/deleteModal.css
+++ b/src/components/deleteModal.css
@@ -4,15 +4,15 @@
     color: hsl(211, 10%, 45%);
     background-color: white;
     border-radius: 10px;
-    height: 175px;
+    height: 185px;
     width: 350px;
     padding: 30px;
-    position: fixed;    /* Stay in place */
+    position: fixed;    
     z-index: 10;
     align-content: center;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%); /* otherwise it won't be centered */
+    transform: translate(-50%, -50%); 
 }
 
 .modalTitle {
@@ -53,15 +53,15 @@
 }
 
 .modalBackground {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
     background-color: rgba(0,0,0,0.4); /* Black with opacity */
+    background-color: rgb(0,0,0); /* Fallback color */
 }
 
 @media (max-width: 620px) {
